[dkp][ai] update v0.0.17
