# images/hooks/pkg/hooks/validate_module_config/hook.go
@@ -92,6 +92,7 @@ func handleValidateModuleConfig(_ context.Context, input *pkg.HookInput) error {
 	setValueOrRemove(input, settings.ConfigRoot+".managedNodes", sanitized["managedNodes"])
 	setValueOrRemove(input, settings.ConfigRoot+".deviceApproval", sanitized["deviceApproval"])
 	setValueOrRemove(input, settings.ConfigRoot+".scheduling", sanitized["scheduling"])
+	setValueOrRemove(input, settings.ConfigRoot+".monitoring", sanitized["monitoring"])
 	setInventoryResyncPeriod(input, sanitized["inventory"])
 
 	var userHTTPS map[string]any
